<resources>
    <string name="app_name">AllProjects</string>
    <string name="action_settings">Settings</string>
    <string name="my_title">My Apps!</string>
    <string name="media_streamer">SPOTIFY STREAMER</string>
    <string name="super_duo1">SCORES APP</string>
    <string name="super_duo2">LIBRARY APP</string>
    <string name="ant_terminator">BUILD IT BIGGER</string>
    <string name="materialize">XYZ READER</string>
    <string name="capstone">CAPSTONE:MY OWN APP</string>
    <string name="open_app">Opens the app: </string>

</resources>
