<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffdfeaf1">

    <TextView android:text="@string/my_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="22dp"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_streamer"
        android:id="@+id/btn_spotify"
        android:width="450px"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:background="#ffffd33b" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_duo1"
        android:id="@+id/btn_scores"
        android:width="450px"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btn_spotify"
        android:layout_centerHorizontal="true"
        android:background="#ffffd33b" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_duo2"
        android:id="@+id/btn_library"
        android:width="450px"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btn_scores"
        android:layout_centerHorizontal="true"
        android:background="#ffffd33b" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ant_terminator"
        android:id="@+id/btn_build_bigger"
        android:width="450px"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btn_library"
        android:layout_centerHorizontal="true"
        android:background="#ffffd33b" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/materialize"
        android:id="@+id/btn_xyz_reader"
        android:width="450px"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btn_build_bigger"
        android:layout_centerHorizontal="true"
        android:background="#ffffd33b" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/btn_capstone"
        android:width="450px"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btn_xyz_reader"
        android:layout_centerHorizontal="true"
        android:background="#ffff375f"
        android:textColor="@android:color/white" />

</RelativeLayout>
